# disc-printer

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
flatpak/: de.haku.disc-printer.desktop  de.haku.disc-printer.flatpakref  de.haku.disc-printer.metainfo.xml  de.haku.disc-printer.yml
src/disc_printer/: __init__.py  __main__.py  _log.py  constants.py  detection.py  file_format.py  history.py  i18n.py  image_utils.py  model.py  printer.py  settings.py
src/disc_printer/gui/: canvas.py  dialogs.py  window.py
src/disc_printer/locale/: LINGUAS  disc_printer.pot
src/disc_printer/locale/ar/LC_MESSAGES/: disc_printer.po
src/disc_printer/locale/bg/LC_MESSAGES/: disc_printer.po
src/disc_printer/locale/cs/LC_MESSAGES/: disc_printer.po
src/disc_printer/locale/da/LC_MESSAGES/: disc_printer.po
src/disc_printer/locale/el/LC_MESSAGES/: disc_printer.po
src/disc_printer/locale/en/LC_MESSAGES/: disc_printer.po
src/disc_printer/locale/es/LC_MESSAGES/: disc_printer.po
src/disc_printer/locale/fa/LC_MESSAGES/: disc_printer.po
src/disc_printer/locale/fi/LC_MESSAGES/: disc_printer.po
src/disc_printer/locale/fr/LC_MESSAGES/: disc_printer.po
src/disc_printer/locale/he/LC_MESSAGES/: disc_printer.po
src/disc_printer/locale/hi/LC_MESSAGES/: disc_printer.po
src/disc_printer/locale/hr/LC_MESSAGES/: disc_printer.po
src/disc_printer/locale/hu/LC_MESSAGES/: disc_printer.po
src/disc_printer/locale/id/LC_MESSAGES/: disc_printer.po
src/disc_printer/locale/it/LC_MESSAGES/: disc_printer.po
src/disc_printer/locale/ja/LC_MESSAGES/: disc_printer.po
(+16 files in other folders)
